tests/fixtures/invalid/pow_list_bool_bool.py
# Cannot call pow() with List[int], Bool, Bool
x = pow([1, 2, 3], True, True)
